--- a/meas.tex
+++ b/meas.tex
@@ -165,4 +165,22 @@ The event selection scheme can also be seen in figure \ref{fig:selection}. Table
 \caption{Event selection diagram for selection I and selection II. This analysis focused on optimizing selection I. Boxes with the same color across the two selections symbolize similar cuts.}
 \label{fig:selection}
 \end{figure}
+
+\begin{table}
+\begin{center}
+\begin{tabular}{c c c c}
+\hline
+& \vline  BNB+Cosmic  & \vline Cosmic Only  & \vline Signal:Cosmic Only \vline \\
+& \vline  Selection \t\t\t MC-Truth  & \vline &\vline \\
+Generated Events & 191362 \t 45273 & 4804 & 1:22 \\
+Cosmics only ( no flash) & 308,016 & 291,879 & 602 \\
+Cosmics only (w/ flash) & 2464 & 2335 & 5 \\
+\hline
+Neutrinos/Cosmics & 0.23 & 0.13 & 6.4 \\
+\end{tabular}
+\caption{Passing rates for 2D cluster cuts for neutrino on MC set and a cosmic only MC set. First column shows event rates with no cuts applied to both sets. Columns two and three show event rates after primary and secondary cuts are applied. Line three shows the seccond line scaled with the flash finding factor of 0.008. All events are normalized to per day assuming we are running at 5 Hz.}
+\label{table:mc}
+\end{center}
+\end{table}
+The resulting neutrino/cosmic event rate per day is shown in table \ref{table:eventrate}. Figures \ref{fig:2dprimarycut} and \ref{fig:2dsecondarycuts} shows the percentages of clusters that pass each primary and secondary cuts.     
 %\section{The importance of $\mu/\pi$ separation}
