--- a/meas.tex
+++ b/meas.tex
@@ -221,37 +221,37 @@ The efficiency and purity of Selection I are calculated below:
 The truth distributions of MC truth variables before and after the selection are detailed in this section. The overall efficiencies are calculated for all $\nu_{\mu}$ CC signal events with a true interaction within the fiducial volume and a fully contained muon track originating from said vertex. Figures \ref{fig:p} through \ref{fig:angle} detail the truth distributions for muon momentum, $cos(\theta)$ and $\phi$ and figures \ref{fig:stacked} through \ref{fig:stacked2} detail the total efficiency of the selection for charged current quasi elestic (CCQE) events, charged current resonant (CCRES) events, and charged current deep inelastic (CCDIS) events. 
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_mumomentum.png}
+\includegraphics[width=\textwidth]{figs/truth_mumomentum.png}
 \caption{MC momentum distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the momentum distributions of events with a vertex within the FV (green) and the events with a fully contained track (blue) before the selection. The upper right side is the momentum distribution after the selection (red). The lower plot is the selection efficiencies.}
 \label{fig:p}
 \end{figure}
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_mucostheta.png}
+\includegraphics[width=\textwidth]{figs/truth_mucostheta.png}
 \caption{MC $cos(\theta)$ distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the $cos(\theta)$ distributions of events with a vertex within the FV (green) and the events with a fully contained track (blue) before the selection. The upper right side is the $cos(\theta)$ distribution after the selection (red). The lower plot is the selection efficiencies.}
 \label{fig:angle1}
 \end{figure}
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_muphi.png}
+\includegraphics[width=\textwidth]{figs/truth_muphi.png}
 \caption{MC $\phi$ distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the $\phi$ distributions of events with a vertex within the FV (green) and the events with a fully contained track (blue) before the selection. The upper right side is the $\phi$ distribution after the selection (red). The lower plot is the selection efficiencies.}
 \label{fig:angle}
 \end{figure}
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_stackedmumomentum.png}
+\includegraphics[width=\textwidth]{figs/truth_stackedmumomentum.png}
 \caption{MC momentum distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the momentum distributions of events with a vertex within the FV split up into CCQE (red), CCRES (yellow), and CCDIS (green) before selection. The upper right side is the momentum distribution after the selection with the same color schemes. The lower plot is the selection efficiencies for all three interaction types. The definition of QE, RES, and DIS is based on GENIE.}
 \label{fig:stacked}
 \end{figure}
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_stackedmucostheta.png}
+\includegraphics[width=\textwidth]{figs/truth_stackedmucostheta.png}
 \caption{MC $cos(\theta)$ distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the $cos(\theta)$ distributions of events with a vertex within the FV split up into CCQE (red), CCRES (yellow), and CCDIS (green) before selection. The upper right side is the $cos(\theta)$ distribution after the selection with the same color schemes. The lower plot is the selection efficiencies for all three interaction types. The definition of QE, RES, and DIS is based on GENIE.}
 \label{fig:stacked1}
 \end{figure}
 
 \begin{figure}[htp!]
-\includegraphics[width=.7\textwidth]{figs/truth_stackedmucostheta.png}
+\includegraphics[width=\textwidth]{figs/truth_stackedmuphi.png}
 \caption{MC $\phi$ distributions of the muon originating from a $\nu_{\mu}$ CC interaction. Upper left is the $\phi$ distributions of events with a vertex within the FV split up into CCQE (red), CCRES (yellow), and CCDIS (green) before selection. The upper right side is the $\phi$ distribution after the selection with the same color schemes. The lower plot is the selection efficiencies for all three interaction types. The definition of QE, RES, and DIS is based on GENIE.}
 \label{fig:stacked2}
 \end{figure}
