--- a/neutrinoID.tex
+++ b/neutrinoID.tex
@@ -127,3 +127,39 @@ The main background observed in the 2D filter were Michel events, where the muon
 It was seen that cosmic tracks can often originate or end at the same point, therefore faking a signal. Cosmic tracks, however, are mostly vertical. By requiring the angle of the longer track have a cosine greater than 0.85 with respect to the z-axis as well as requiring the longer track to have a length greater than 10 cm, we can reduce this background. 
 \section{Conclusion}
 After proccesing these filters in parallel, it was shown that the 3D filter had a higher purity than the 2D filter because of the higher cosmic rejection being used due to 3D reconstruction. The 2D filter is blind to track entering/exiting from the top or bottom of the TPC. Although the 3D filter had a higher purity, the 2D filter was still able to find identifiable events in data that were used as public event displays. A sample of event displays are shown in figures \ref{fig:2dimage} and \ref{fig:3dimage}.
+
+\begin{figure}[htp!]
+\centering
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3469_subrun574_event28734_col.pdf}
+	\end{subfigure}
+	\quad
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3469_subrun574_event28734_ind0.pdf}
+	\end{subfigure}
+	\quad
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3469_subrun574_event28734_ind1.pdf}
+	\end{subfigure}
+	\quad
+\caption{First Neutrino Interaction Candidate Events from MicroBooNE}
+\label{fig:2dimage}
+\end{figure}
+
+\begin{figure}[htp!]
+\centering
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3493_subrun821_event41075_col.pdf}
+	\end{subfigure}
+	\quad
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3493_subrun821_event41075_ind0.pdf}
+	\end{subfigure}
+	\quad
+	\begin{subfigure}[b]{.8\textwidth}
+	\includegraphics[width=\textwidth]{figs/first_neutrino_pdfs/run3493_subrun821_event41075_ind1.pdf}
+	\end{subfigure}
+	\quad
+\caption{First Neutrino Interaction Candidate Events from MicroBooNE}
+\label{fig:3dimage}
+\end{figure}
